update ClassStudent
